--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -137,6 +137,7 @@
   "CANNEL_VERSION_DESC": "此版本正在等待审核，确定要撤销吗？",
   "Test Runtime": "测试环境",
   "Instance Name ID": "实例名称 ID",
+  "Agent Name ID": "代理名称 ID",
   "Create Time": "创建时间",
   "App Info": "应用信息",
   "Base Info": "基本信息",
@@ -246,7 +247,7 @@
   "Current status": "当前状态",
   "App review detail": "应用审核详情",
   "Audit content": "审核内容",
-  "AUDIT_CONTENT_INTRODUCE": "以下信息必须真实准确，关键的操作说明需要描述详情，对于条款中的权利与义务需要描述清晰，",
+  "AUDIT_CONTENT_INTRODUCE": "以下信息必须真实准确，关键的操作说明需要描述详情，对于条款中的权利与义务需要描述清晰。",
   "view detail standard": "查看详细标准",
 
   "Create test runtime": "创建测试环境",
