--- a/src/locales/zh/deploy.json
+++ b/src/locales/zh/deploy.json
@@ -13,6 +13,7 @@
   "STEPPER_FOOTER_APP_DEPLOY_1": "部署完成的实例将会出现在「我的实例」列表中",
   "STEPPER_TITLE_APP_DEPLOY_TEST_1": "部署测试实例",
   "STEPPER_FOOTER_APP_DEPLOY_TEST_1": "部署完成的测试实例将会出现在「测试实例/沙盒实例」列表中",
+  "HELM_APP_NAME_ERROR": "实例名称必须是$t(HELM_APP_NAME_TIP)",
   "HELM_APP_NAME_TIP": "小写字母开头，最长14个字符（支持数字/小写字母/连字符）",
   "No available version": "没有可用版本"
 }
