--- a/src/locales/zh/runtime.json
+++ b/src/locales/zh/runtime.json
@@ -27,5 +27,6 @@
   "TIPS_ADD_CREDENTIAL_K8S_2": "复制「~/.kube/config」下的内容。",
 
   "User runtime": "运行环境",
-  "Access key or secret key is not completed": "访问密钥ID 或 访问密钥私钥 未填写"
+  "Access key or secret key is not completed": "访问密钥ID 或 访问密钥私钥 未填写",
+  "Set runtime credential name": "设置授权信息名称"
 }
