--- a/src/locales/en/base.json
+++ b/src/locales/en/base.json
@@ -186,6 +186,9 @@
 
   "DELETE_APP_DESCRIPTION": "Are you sure delete the app \"{{appName}}\"?",
   "DEPLOYED_APP_DESCRIPTION": "All the applications you have deployed will be shown here.",
+  "TIPS_NOT_ADD_ENV": "You haven't added {{env}} for {{platform}} yet",
+  "TIPS_NOT_ADD_AUTH": "You haven't added authorization information for {{platform}}",
+  "TIP_HELM_NAMESPACE": "The input characters for the namespace contain only lowercase letters and numbers",
   "MY_INSTANCES_DESCRIPTION": "List of instances created based on the application.",
 
   "SPECIFICATION_LINK_TITLE": "{{type}} specification and application development"
