--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -57,13 +57,14 @@
   "Create role success": "角色创建成功",
   "Create_Role_Success_Tip": "新角色默认是停用状态，请完成权限设置后再启用。",
   "Do you sure to delete groupName": "您确定要删除组织 {{groupName}} 吗？",
-  "Do you sure to delete roleName": "您确定要删除角色 {{roleName}} 吗？",
+  "DELETE_ROLE": "您确定要删除角色 {{roleName}} 吗？",
   "Do you sure to leaveGroup groupName": "确定为选中的 {{names}} {{count}} 账号离开组织",
   "ISV_ROLE_CREATE_TIP": "如果以上角色不能满足管理需求，可以",
   "DELETE_GROUP_TIP": "删除操作需要确保先删除子级组织以及其绑定的用户关系",
   "SELECT_GROUP": "所选组织机构：{{ position }}",
   "Group name": "组织名称",
   "Add the child node": "添加下一级",
+  "Customize": "自定义",
   "All members": "全部成员",
   "Team and member": "团队与成员",
   "Empty user": "用户名为空",
